--- a/src/main/resources/templates/StudentProfile.html
+++ b/src/main/resources/templates/StudentProfile.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Student Dashboard</title>
+    <title>Title</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
     <style>
@@ -10,11 +10,10 @@
             font-family: 'Poppins', sans-serif;
         }
     </style>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
 </head>
 <body>
+
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark py-4">
     <a class="navbar-brand" href="#">Lab & Class Management -student portal</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -44,10 +43,34 @@
         </ul>
     </div>
 </nav>
-
-<div class="container mt-4">
-    <h1 class="text-center">Welcome, <span th:text="${session.loggedInUser.username}">Username</span>!</h1>
+<div class="container mt-5">
+    <h1>User Details</h1>
+    <form th:object="${user}" method="post" action="/update-user" class="mt-3">
+        <div class="form-group">
+            <label for="username">Username</label>
+            <input type="text" th:field="*{username}" class="form-control" id="username">
+        </div>
+        <div class="form-group">
+            <label for="firstName">First Name</label>
+            <input type="text" th:field="*{firstname}" class="form-control" id="firstName">
+        </div>
+        <div class="form-group">
+            <label for="lastName">Last Name</label>
+            <input type="text" th:field="*{lastname}" class="form-control" id="lastName">
+        </div>
+        <div class="form-group">
+            <label for="email">Email</label>
+            <input type="email" th:field="*{email}" class="form-control" id="email">
+        </div>
+        <button type="submit" class="btn btn-primary">Update</button>
+    </form>
 </div>
+
+
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
 </body>
 </html>
