--- a/src/main/resources/templates/MentorDashboard.html
+++ b/src/main/resources/templates/MentorDashboard.html
@@ -23,25 +23,23 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mx-auto">
             <li class="nav-item">
-                <a class="nav-link" href="#">Dashboard</a>
+                <a class="nav-link" href="/">Dashboard</a>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Booking
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Book a Lab</a>
-                    <a class="dropdown-item" href="#">View Bookings</a>
+                    <a class="dropdown-item" href="/bookLab">Book a Lab</a>
+                    <a class="dropdown-item" href="/AllBookings">View Bookings</a>
                 </div>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Profile</a>
             </li>
+
             <li class="nav-item">
-                <a class="nav-link" href="#">Notification</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Logout</a>
+                <a class="nav-link" href="/logout">Logout</a>
             </li>
         </ul>
     </div>
