--- a/src/main/resources/templates/TutorDashboard.html
+++ b/src/main/resources/templates/TutorDashboard.html
@@ -30,26 +30,24 @@
                     Booking
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Book a Lab</a>
-                    <a class="dropdown-item" href="#">View Bookings</a>
+                    <a class="dropdown-item" href="/AddTutorBooking">Book a Lab</a>
+                    <a class="dropdown-item" href="/ViewBooking">View Bookings</a>
                 </div>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Profile</a>
             </li>
+
             <li class="nav-item">
-                <a class="nav-link" href="#">Notification</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Logout</a>
+                <a class="nav-link" href="/logout">Logout</a>
             </li>
         </ul>
     </div>
 </nav>
 
 <div class="container mt-4">
-    <h2>Welcome to the Tutor Dashboard</h2>
-    <!-- Add your content here -->
+    <h2 class="text-center">Welcome,  <span th:text="${session.loggedInUser.username}">Username</span></h2>
+
 </div>
 
 </body>
