--- a/src/main/resources/templates/add-user.html
+++ b/src/main/resources/templates/add-user.html
@@ -30,7 +30,7 @@
                 <div class="dropdown-menu" aria-labelledby="BookingDropdown">
                     <a class="dropdown-item" href="#">View All Bookings</a>
                     <a class="dropdown-item" href="#">Approve Lab Bookings</a>
-                    <a class="dropdown-item" href="#">Manage Lab Availability</a>
+
                 </div>
             </li>
             <li class="nav-item dropdown">
@@ -63,9 +63,14 @@
     </div>
 </nav>
 
+
 <div class="container">
+
     <h1>Add User</h1>
     <form th:action="@{/add-user}" method="post">
+        <div th:if="${errorMessage != null}">
+            <p th:text="${errorMessage}" style="color: red;"></p>
+        </div>
         <div class="form-group">
             <label for="firstname">First Name</label>
             <input type="text" class="form-control" id="firstname"  name="firstname" required>
