--- a/src/main/resources/templates/view-timeslots.html
+++ b/src/main/resources/templates/view-timeslots.html
@@ -28,9 +28,8 @@
                     Booking
                 </a>
                 <div class="dropdown-menu" aria-labelledby="BookingDropdown">
-                    <a class="dropdown-item" href="#">View All Bookings</a>
+                    <a class="dropdown-item" href="/AllBookings">View All Bookings</a>
                     <a class="dropdown-item" href="#">Approve Lab Bookings</a>
-                    <a class="dropdown-item" href="#">Manage Lab Availability</a>
                 </div>
             </li>
             <li class="nav-item dropdown">
