--- a/src/main/resources/templates/AdminDashboard.html
+++ b/src/main/resources/templates/AdminDashboard.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Admin Dashboard</title>
@@ -59,7 +59,7 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark py-4">
-    <a class="navbar-brand" href="#">Lab & Class Management</a>
+    <a class="navbar-brand" href="#">Lab  Management</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -73,7 +73,7 @@
                     Booking
                 </a>
                 <div class="dropdown-menu" aria-labelledby="BookingDropdown">
-                    <a class="dropdown-item" href="#">View All Bookings</a>
+                    <a class="dropdown-item" href="/AllBookings">View All Bookings</a>
                     <a class="dropdown-item" href="#">Approve Lab Bookings</a>
                 </div>
             </li>
