--- a/src/main/resources/templates/MentorAddBooking.html
+++ b/src/main/resources/templates/MentorAddBooking.html
@@ -2,26 +2,18 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Add booking</title>
+    <title>Mentor Booking creation</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: 'Poppins', sans-serif;
-            background-color: #f8f9fa;
         }
-        .navbar {
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        }
-
-        .card {
+         .card {
             border: none;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         }
     </style>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script>
         $(document).ready(function() {
             $('#labSelect').change(function() {
@@ -44,29 +36,33 @@
             });
         });
     </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark py-4">
-    <a class="navbar-brand" href="#">Lab  Management -Tutor portal</a>
+    <a class="navbar-brand" href="#">Lab  Management -Mentor portal</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mx-auto">
             <li class="nav-item">
-                <a class="nav-link" href="/TutorDashboard">Dashboard</a>
+                <a class="nav-link" href="/MentorDashboard">Dashboard</a>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Booking
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="/AddTutorBooking">Book a Lab</a>
-                    <a class="dropdown-item" href="/ViewTutorBooking">View Bookings</a>
+                    <a class="dropdown-item" href="/bookLab">Book a Lab</a>
+                    <a class="dropdown-item" href="/ViewMentorBooking">View Bookings</a>
                 </div>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/tutorProfile">Profile</a>
+                <a class="nav-link" href="#">Profile</a>
             </li>
 
             <li class="nav-item">
