--- a/src/main/resources/templates/MentorProfile.html
+++ b/src/main/resources/templates/MentorProfile.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Student Dashboard</title>
+    <title>Mentor Profile</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
     <style>
@@ -13,29 +13,30 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark py-4">
-    <a class="navbar-brand" href="#">Lab  Management -Tutor portal</a>
+    <a class="navbar-brand" href="#">Lab  Management -Mentor portal</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mx-auto">
             <li class="nav-item">
-                <a class="nav-link" href="/TutorDashboard">Dashboard</a>
+                <a class="nav-link" href="/MentorDashboard">Dashboard</a>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Booking
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="/AddTutorBooking">Book a Lab</a>
-                    <a class="dropdown-item" href="/ViewTutorBooking">View Bookings</a>
+                    <a class="dropdown-item" href="/bookLab">Book a Lab</a>
+                    <a class="dropdown-item" href="/ViewMentorBooking">View Bookings</a>
                 </div>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/tutorProfile">Profile</a>
+                <a class="nav-link" href="#">Profile</a>
             </li>
 
             <li class="nav-item">
@@ -44,11 +45,31 @@
         </ul>
     </div>
 </nav>
-
-<div class="container mt-4">
-    <h2 class="text-center">Welcome,  <span th:text="${session.loggedInUser.username}">Username</span></h2>
-
+<div class="container mt-5">
+    <h1>User Details</h1>
+    <form th:object="${user}" method="post" action="/update" class="mt-3">
+        <div class="form-group">
+            <label for="username">Username</label>
+            <input type="text" th:field="*{username}" class="form-control" id="username">
+        </div>
+        <div class="form-group">
+            <label for="firstName">First Name</label>
+            <input type="text" th:field="*{firstname}" class="form-control" id="firstName">
+        </div>
+        <div class="form-group">
+            <label for="lastName">Last Name</label>
+            <input type="text" th:field="*{lastname}" class="form-control" id="lastName">
+        </div>
+        <div class="form-group">
+            <label for="email">Email</label>
+            <input type="email" th:field="*{email}" class="form-control" id="email">
+        </div>
+        <div class="form-group">
+            <label for="password">Password</label>
+            <input type="password" th:field="*{password}" class="form-control" id="password">
+        </div>
+        <button type="submit" class="btn btn-primary">Update</button>
+    </form>
 </div>
-
 </body>
 </html>
