--- a/src/main/resources/templates/StudentProfile.html
+++ b/src/main/resources/templates/StudentProfile.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -15,7 +15,7 @@
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark py-4">
-    <a class="navbar-brand" href="#">Lab & Class Management -student portal</a>
+    <a class="navbar-brand" href="#">Lab Management -student portal</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -45,7 +45,7 @@
 </nav>
 <div class="container mt-5">
     <h1>User Details</h1>
-    <form th:object="${user}" method="post" action="/update-user" class="mt-3">
+    <form th:object="${user}" method="post" action="/update" class="mt-3">
         <div class="form-group">
             <label for="username">Username</label>
             <input type="text" th:field="*{username}" class="form-control" id="username">
@@ -61,6 +61,10 @@
         <div class="form-group">
             <label for="email">Email</label>
             <input type="email" th:field="*{email}" class="form-control" id="email">
+        </div>
+        <div class="form-group">
+            <label for="password">Password</label>
+            <input type="password" th:field="*{password}" class="form-control" id="password">
         </div>
         <button type="submit" class="btn btn-primary">Update</button>
     </form>
