--- a/src/main/resources/templates/add-timeslot.html
+++ b/src/main/resources/templates/add-timeslot.html
@@ -14,7 +14,7 @@
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark py-4">
-    <a class="navbar-brand" href="#">Lab & Class Management</a>
+    <a class="navbar-brand" href="#">Lab Management</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -28,9 +28,9 @@
                   Booking
                 </a>
                 <div class="dropdown-menu" aria-labelledby="BookingDropdown">
-                    <a class="dropdown-item" href="#">View All Bookings</a>
+                    <a class="dropdown-item" href="/AllBookings">View All Bookings</a>
                     <a class="dropdown-item" href="#">Approve Lab Bookings</a>
-                    <a class="dropdown-item" href="#">Manage Lab Availability</a>
+
                 </div>
             </li>
 
@@ -66,13 +66,16 @@
     </div>
 </nav>
 <div class="container">
+    <div class="alert alert-success">
+        <p th:text="${message}"></p>
+    </div>
     <h1>Add Time Slot</h1>
     <form th:action="@{/timeslots}" th:object="${timeSlot}" method="post">
         <div class="form-group">
             <label for="lab">Lab</label>
             <select class="form-control" id="lab" th:field="*{lab}" required>
                 <option value="">Select a lab</option>
-                <option th:each="lab : ${labs}" th:value="${lab.id}" th:text="${lab.getType()}"></option>
+                <option th:each="lab : ${labs}" th:value="${lab.id}" th:text="${lab.lab_location}"></option>
             </select>
         </div>
 
