--- a/src/main/resources/templates/manage-users.html
+++ b/src/main/resources/templates/manage-users.html
@@ -30,7 +30,7 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark py-4">
-    <a class="navbar-brand" href="#">Lab & Class Management</a>
+    <a class="navbar-brand" href="#">Lab Management</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -44,7 +44,7 @@
                     Booking
                 </a>
                 <div class="dropdown-menu" aria-labelledby="BookingDropdown">
-                    <a class="dropdown-item" href="#">View All Bookings</a>
+                    <a class="dropdown-item" href="/AllBookings">View All Bookings</a>
                     <a class="dropdown-item" href="#">Approve Lab Bookings</a>
                 </div>
             </li>
