Commit a few changes

--- a/src/main/resources/templates/TutorAddBooking.html
+++ b/src/main/resources/templates/TutorAddBooking.html
@@ -83,7 +83,7 @@
                     <h4 class="mb-0">Book a Lab</h4>
                 </div>
                 <div class="card-body">
-                    <form th:action="@{/bookLab}" method="post">
+                    <form th:action="@{/Tutor_BookLab}" method="post">
                         <div class="form-group">
                             <label for="labSelect">Select a Lab:</label>
                             <select class="form-control" id="labSelect" name="labId" required>
