--- a/src/main/resources/templates/bookingConfirmation.html
+++ b/src/main/resources/templates/bookingConfirmation.html
@@ -79,7 +79,7 @@
     </div>
 </nav>
 <div class="container my-5">
-<h1 class="text-center mb-4">Booking Confirmation</h1>
+<h1 class="text-center mb-4">Booking Submission</h1>
 <div class="receipt">
     <div class="receipt-header">
         <h5 class="mb-0">Booking Receipt</h5>
